@@ -54,6 +54,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Bulk actions under the "More" dropdown are now accessible for screen reader and keyboard users (Thibaud Colas)
  * Navigation to translations via the locale dropdown is now accessible for screen reader and keyboard users (Thibaud Colas)
  * Make it possible for speech recognition users to reveal chooser buttons (Thibaud Colas)
+ * Use constant-time comparison for image serve URL signatures (Jake Howard)
 
 ### Documentation
 
