@@ -25,6 +25,7 @@ Changelog
  * Fix: Ensure that title and slug are synced on keypress, not just on blur (LB (Ben) Johnston)
  * Fix: Add a more visible active state for side panel toggle buttons (Thibaud Colas)
  * Fix: Debounce and optimise live preview panel to prevent excessive requests (Sage Abdullah)
+ * Fix: Use constant-time comparison for image serve URL signatures (Jake Howard)
  * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
  * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
  * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
